clang-tidy: misleading-indentation+noexcept-move
manual fixes (check without auto fix) for
readability-misleading-indentation
performance-noexcept-move-constructor

Change-Id: I5c004c623b03a4a9e907ba0b340a3a721f511dd3

--- a/src/gromacs/CMakeLists.txt
+++ b/src/gromacs/CMakeLists.txt
@@ -280,8 +280,8 @@ if (GMX_CLANG_TIDY)
    set_target_properties(libgromacs PROPERTIES CXX_CLANG_TIDY "${CLANG_TIDY_EXE};--checks=\
        -clang-analyzer-security.insecureAPI.strcpy,-clang-analyzer-core.NullDereference,\
        bugprone-*,misc-*,readability-*,performance-*,mpi-*,\
-       -misc-misplaced-widening-cast,-readability-named-parameter,-performance-noexcept-move-constructor,\
-       -readability-misleading-indentation,-misc-suspicious-string-compare,\
+       -misc-misplaced-widening-cast,-readability-named-parameter,\
+       -misc-suspicious-string-compare,\
        -readability-redundant-control-flow,-performance-unnecessary-value-param,\
        -readability-static-definition-in-anonymous-namespace,-misc-suspicious-missing-comma,\
        -readability-redundant-member-init,-misc-misplaced-const,\
