clang-tidy: more misc+readability
Auto fixes:
misc-macro-parentheses
readability-named-parameter

Enabled with few violations disabled by configuration:
misc-throw-by-value-catch-by-reference
readability-function-size

Set clang-tidy checks as list to allow comments.

Refactored the operator <<< used by GMX_THROW to take the exception by
value and return a copy, which is easier for tools to see is a proper
throw-by-value (of a temporary).  Performance on the throwing path is
not important, but is anyway not affected because the inlining of the
operator allows the compiler to elide multiple copies. This also
avoids casting away the constness.

Change-Id: I85c3e3c8a494119ef906c0492680c0d0b177a38d

--- a/src/gromacs/CMakeLists.txt
+++ b/src/gromacs/CMakeLists.txt
@@ -277,15 +277,20 @@ if (GMX_CLANG_TIDY)
    if(CMAKE_VERSION VERSION_LESS "3.6")
        message(ERROR "clang-tidy support requires cmake 3.6.")
    endif()
-   set_target_properties(libgromacs PROPERTIES CXX_CLANG_TIDY "${CLANG_TIDY_EXE};--checks=\
-       -clang-analyzer-security.insecureAPI.strcpy,\
-       bugprone-*,misc-*,readability-*,performance-*,mpi-*,\
-       -misc-misplaced-widening-cast,-readability-named-parameter,\
-       -misc-misplaced-const,\
-       -misc-incorrect-roundings,-misc-macro-parentheses,-readability-function-size,-readability-else-after-return,\
-       -readability-inconsistent-declaration-parameter-name,-misc-throw-by-value-catch-by-reference,\
-       -readability-implicit-bool-conversion,\
-       modernize-use-nullptr,modernize-use-emplace;-warnings-as-errors=*;-fix")
+   set(CLANG_TIDY_CHECKS
+       "-clang-analyzer-security.insecureAPI.strcpy"
+       "bugprone-*" "misc-*" "readability-*" "performance-*" "mpi-*"
+       "-misc-misplaced-widening-cast"
+       "-misc-misplaced-const"
+       "-misc-incorrect-roundings" #TODO: #2562
+       "-readability-else-after-return"
+       "-readability-inconsistent-declaration-parameter-name"
+       "-readability-implicit-bool-conversion" #TODO: Remove gmx_bool
+       "modernize-use-nullptr" "modernize-use-emplace"
+       )
+   string(REPLACE ";" "," CLANG_TIDY_CHECKS "${CLANG_TIDY_CHECKS}")
+   set_target_properties(libgromacs PROPERTIES CXX_CLANG_TIDY
+       "${CLANG_TIDY_EXE};--checks=${CLANG_TIDY_CHECKS};-warnings-as-errors=*;-fix")
 endif()
 
 gmx_write_installed_header_list()
