3/3 of old-style casting
Also remove GMX_CXX11_COMPILATION and gmx_qsort

Change-Id: I3cfec7dfdb47da89d3849ff7e9cc15f0550194a9

--- a/src/gromacs/CMakeLists.txt
+++ b/src/gromacs/CMakeLists.txt
@@ -276,7 +276,6 @@ set(IGNORED_CLANG_ALL_WARNINGS
     "-Wno-missing-field-initializers"
     "-Wno-sign-conversion"
     "-Wno-disabled-macro-expansion"
-    "-Wno-cast-align"
     "-Wno-undefined-reinterpret-cast"
     "-Wno-covered-switch-default"
     "-Wno-reserved-id-macro"
@@ -302,7 +301,6 @@ set(IGNORED_CLANG_ALL_WARNINGS
     "-Wno-used-but-marked-unused"
     "-Wno-padded"
     "-Wno-float-equal"
-    "-Wno-old-style-cast"
     "-Wno-conversion"
     "-Wno-double-promotion")
 string(REPLACE " " ";" IGNORED_CLANG_ALL_WARNINGS "${IGNORED_CLANG_ALL_WARNINGS}")
@@ -327,7 +325,7 @@ if (GMX_CLANG_TIDY)
        "-readability-inconsistent-declaration-parameter-name"
        "-readability-implicit-bool-conversion" #TODO: Remove gmx_bool
        "modernize-use-nullptr" "modernize-use-emplace"
-#       "google-readability-casting"
+       "google-readability-casting"
        )
    string(REPLACE ";" "," CLANG_TIDY_CHECKS "${CLANG_TIDY_CHECKS}")
    set_target_properties(libgromacs PROPERTIES CXX_CLANG_TIDY
