3/3 of old-style casting
Also remove GMX_CXX11_COMPILATION and gmx_qsort

Change-Id: I3cfec7dfdb47da89d3849ff7e9cc15f0550194a9

--- a/src/gromacs/CMakeLists.txt
+++ b/src/gromacs/CMakeLists.txt
@@ -274,13 +274,13 @@ set(IGNORED_CLANG_ALL_WARNINGS
     "-Wno-documentation-unknown-command" #Custom commands are used
     #Following ones are undecided/TODO
     "-Wno-missing-field-initializers -Wno-sign-conversion -Wno-disabled-macro-expansion"
-    "-Wno-cast-align -Wno-undefined-reinterpret-cast -Wno-covered-switch-default -Wno-reserved-id-macro"
+    "-Wno-undefined-reinterpret-cast -Wno-covered-switch-default -Wno-reserved-id-macro"
     "-Wno-global-constructors -Wno-unreachable-code -Wno-comma -Wno-unreachable-code-return"
     "-Wno-exit-time-destructors -Wno-unused-macros -Wno-weak-vtables -Wno-extra-semi -Wno-switch-enum"
     "-Wno-shadow-field-in-constructor -Wno-unreachable-code-break -Wno-conditional-uninitialized"
     "-Wno-missing-variable-declarations -Wno-float-conversion -Wno-format-nonliteral -Wno-shadow"
     "-Wno-cast-qual -Wno-shorten-64-to-32 -Wno-documentation -Wno-used-but-marked-unused -Wno-padded"
-    "-Wno-float-equal -Wno-old-style-cast -Wno-conversion -Wno-double-promotion")
+    "-Wno-float-equal -Wno-conversion -Wno-double-promotion")
 string(REPLACE " " ";" IGNORED_CLANG_ALL_WARNINGS "${IGNORED_CLANG_ALL_WARNINGS}")
 if (CMAKE_CXX_COMPILER_ID MATCHES "Clang" AND CMAKE_CXX_COMPILER_VERSION MATCHES "^6\.0")
    target_compile_options(libgromacs PRIVATE $<$<COMPILE_LANGUAGE:CXX>:-Weverything ${IGNORED_CLANG_ALL_WARNINGS}>)
@@ -303,7 +303,7 @@ if (GMX_CLANG_TIDY)
        "-readability-inconsistent-declaration-parameter-name"
        "-readability-implicit-bool-conversion" #TODO: Remove gmx_bool
        "modernize-use-nullptr" "modernize-use-emplace"
-#       "google-readability-casting"
+       "google-readability-casting"
        )
    string(REPLACE ";" "," CLANG_TIDY_CHECKS "${CLANG_TIDY_CHECKS}")
    set_target_properties(libgromacs PROPERTIES CXX_CLANG_TIDY
