tune_zeta, rotattion
Change-Id: Ibdae30b7a32fe3f423ea3a93caf021cc808896c4

--- a/src/programs/alexandria/tests/CMakeLists.txt
+++ b/src/programs/alexandria/tests/CMakeLists.txt
@@ -44,7 +44,7 @@ gmx_add_unit_test(
     qgen_eemTest.cpp
     qgen_respTest.cpp
     regression.cpp
-    #rotationTest.cpp
+    rotationTest.cpp
     # pseudo-library for code for alexandria
     $<TARGET_OBJECTS:alexandria_objlib>
     )
