Clang warnings: unreachable
Fixing:
-Wno-unreachable-code
-Wno-unreachable-code-return

Also disabling:
-Wno-missing-field-initializers (set by gmxCFlags)
-Wno-sign-conversion (was warning free)

Change-Id: I2c46ffbf08048b17f065647b4d3a84addbfaff4c

--- a/src/gromacs/CMakeLists.txt
+++ b/src/gromacs/CMakeLists.txt
@@ -274,18 +274,14 @@ set(IGNORED_CLANG_ALL_WARNINGS
     "-Wno-source-uses-openmp" #Don't warn for no-omp build
     "-Wno-c++17-extensions"   #Allowed in attributes (compilers are required to ignore unknown attributes)
     "-Wno-documentation-unknown-command" #Custom commands are used
+    "-Wno-covered-switch-default" #GCC gives maybe-uninitialized without default label and checks for illegal enum values.
     #Following ones are undecided/TODO
-    "-Wno-missing-field-initializers"
-    "-Wno-sign-conversion"
     "-Wno-disabled-macro-expansion"
     "-Wno-cast-align"
     "-Wno-undefined-reinterpret-cast"
-    "-Wno-covered-switch-default"
     "-Wno-reserved-id-macro"
     "-Wno-global-constructors"
-    "-Wno-unreachable-code"
     "-Wno-comma"
-    "-Wno-unreachable-code-return"
     "-Wno-exit-time-destructors"
     "-Wno-unused-macros"
     "-Wno-weak-vtables"
