--- a/src/gromacs/CMakeLists.txt
+++ b/src/gromacs/CMakeLists.txt
@@ -274,6 +274,8 @@ set(IGNORED_CLANG_ALL_WARNINGS
     "-Wno-source-uses-openmp" #Don't warn for no-omp build
     "-Wno-c++17-extensions"   #Allowed in attributes (compilers are required to ignore unknown attributes)
     "-Wno-documentation-unknown-command" #Custom commands are used
+    "-Wno-switch-enum" # default statement for enum is OK
+
     #Following ones are undecided/TODO
     "-Wno-disabled-macro-expansion"
     "-Wno-cast-align"
@@ -285,16 +287,10 @@ set(IGNORED_CLANG_ALL_WARNINGS
     "-Wno-unused-macros"
     "-Wno-weak-vtables"
     "-Wno-extra-semi"
-    "-Wno-switch-enum"
-    "-Wno-shadow-field-in-constructor"
-    "-Wno-unreachable-code-break"
     "-Wno-conditional-uninitialized"
-    "-Wno-missing-variable-declarations"
-    "-Wno-float-conversion"
     "-Wno-format-nonliteral"
     "-Wno-shadow"
     "-Wno-cast-qual"
-    "-Wno-shorten-64-to-32"
     "-Wno-documentation"
     "-Wno-used-but-marked-unused"
     "-Wno-padded"
