[RFC] Replacement for nbnxn regression tests
Once generalized, this particular test aims to provide equivalent
coverage to the complex/nbnxn* regression tests, but so far does not
e.g.  attempt to run the nonbonded tasks in different modes. Note that
such tests also tested other things in GROMACS (e.g. thermostats)
which should have their own targetted coverage, so that when we break
things, the names of the broken tests are useful clues.

Made a map consistent with another unordered_map that shares the same
convenience using statement.

Minor usability enhancemenets to reference data infrastructure.

Refs #1587

Change-Id: Ib2e6cd26dbc58e29997ce408cee27917ede95ee9

--- a/src/programs/mdrun/tests/CMakeLists.txt
+++ b/src/programs/mdrun/tests/CMakeLists.txt
@@ -53,6 +53,7 @@ gmx_add_gtest_executable(
     grompp.cpp
     initialconstraints.cpp
     interactiveMD.cpp
+    regressiontest.cpp
     rerun.cpp
     swapcoords.cpp
     tabulated_bonded_interactions.cpp
