Add some developer help to Developer Guide.
Import helpful stuff from old web site.

Change-Id: I9ae4e872a8de014e9ddd3afed47067e9f7aac405

--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -288,6 +288,7 @@ if (SPHINX_FOUND)
         conf.py
         links.dat
         dev-manual/build-system.rst
+        dev-manual/change-management.rst
         dev-manual/commitstyle.rst
         dev-manual/documentation-generation.rst
         dev-manual/contribute.rst
