RFC: Enable more clang-tidy checks for new code
Many of the clang-tidy checks would require too many code
changes when enabled globally. To get the benefits from
the checks without changing all legacy code we could
have two configurations. Which configuration is used could
be selected in two ways:
- per directory: Any new module would use the new configuration
- for any code changes: This could be enforced with clang-tidy-diff.py
  from the LLVM distribution. A concern is that this requires
  to fix all issues when e.g. moving a function. An option is
  to manually overwrite Jenkins in these cases (or make the 2nd tier
  check a non-voting build) if we don't want that.

This change contains the proposed configuration for new code and
and enables it for three folders which contain new code.

Checks enabled relative to base configuration:
clang-analyzer-security.insecureAPI.strcpy
readability-inconsistent-declaration-parameter-name
readability-function-size
cppcoreguidelines-owning-memory
cppcoreguidelines-no-malloc
cppcoreguidelines-pro-type-member-init
cppcoreguidelines-pro-type-union-access

The reasons that the remaining checks are still disabled (don't
know a good place to document because json doesn't allow comments):
misc-incorrect-roundings: #2562
readability-implicit-bool-conversion: Pre-requirement I50b1b2e5683a
readability-else-after-return: I don't think it is something we want to follow
cppcoreguidelines-pro-type-*cast: While it is best to not do those cast there
    are valid reasons for them. And because they are already easy to spot,
    mandating a NOLINT for those is probably not helpful.
cppcoreguidelines-special-member-functions: conflicts with Wunused-member
cppcoreguidelines-pro-type-vararg: #2570
cppcoreguidelines-pro-bounds-constant-array-index: While I think it would be
    nice to have a compile mode with bound checking enabled. It is so ugly
    to have to write at(v, n) instead of v[n].
cppcoreguidelines-pro-bounds-array-to-pointer-decay: T

--- a/src/gromacs/CMakeLists.txt
+++ b/src/gromacs/CMakeLists.txt
@@ -302,7 +302,7 @@ endif()
 
 if (GMX_CLANG_TIDY)
    set_target_properties(libgromacs PROPERTIES CXX_CLANG_TIDY
-       "${CLANG_TIDY_EXE};-warnings-as-errors=*;-header-filter=.*")
+       "${CLANG_TIDY_EXE};-warnings-as-errors=*")
 endif()
 
 gmx_write_installed_header_list()
