[WIP] Add tests for gmx analysis tools
Add test for gmx rmsf that would have caught #2575.
Builds on the new checking ability for PDB comparison introduced in the
parent patch.

Refs #2603

Change-Id: Id841208171da21743a85159242c4c5221adcb309

--- a/src/gromacs/gmxana/tests/CMakeLists.txt
+++ b/src/gromacs/gmxana/tests/CMakeLists.txt
@@ -37,6 +37,7 @@ set(exename gmxana-test)
 gmx_add_gtest_executable(
     ${exename}
     entropy.cpp
+    gmx_rmsf.cpp
     gmx_traj.cpp
     gmx_trjconv.cpp
     )
