Basic framework in which to build gmxapi.
Establish a clean slate in which to develop the new external GROMACS
interface. Introduces `libgmxapi` and installed headers in
`include/gmxapi/` to provide a stable C++ interface.

This is the first change to submit in support of the project described
at Redmine ref #2585, supporting gmxapi milestone 2.

Refs #2375
Refs #2586

Change-Id: I1eb8ea75fdaea77e0ce03f2d312c44db8df16f28

--- a/src/api/cpp/include/CMakeLists.txt
+++ b/src/api/cpp/include/CMakeLists.txt
@@ -1,7 +1,7 @@
 #
 # This file is part of the GROMACS molecular simulation package.
 #
-# Copyright (c) 2009,2010,2011,2012,2013,2014,2015,2016,2017,2018, by the GROMACS development team, led by
+# Copyright (c) 2018, by the GROMACS development team, led by
 # Mark Abraham, David van der Spoel, Berk Hess, and Erik Lindahl,
 # and including many others, as listed in the AUTHORS file in the
 # top-level source directory and at http://www.gromacs.org.
@@ -32,40 +32,9 @@
 # To help us fund GROMACS development, we humbly ask that you cite
 # the research papers on the package. Check out http://www.gromacs.org.
 
-######################################
-# Output compiler and CFLAGS used
-######################################
-include(GetCompilerInfo.cmake)
-get_compiler_info(C BUILD_C_COMPILER BUILD_CFLAGS)
-get_compiler_info(CXX BUILD_CXX_COMPILER BUILD_CXXFLAGS)
-if(GMX_USE_CUDA)
-    if(NOT GMX_CLANG_CUDA)
-        GMX_SET_CUDA_NVCC_FLAGS()
-    endif()
-
-    get_cuda_compiler_info(CUDA_COMPILER_INFO CUDA_COMPILER_FLAGS)
-endif()
-
-configure_file(config.h.cmakein config.h)
-configure_file(gmxpre-config.h.cmakein gmxpre-config.h)
-configure_file(buildinfo.h.cmakein buildinfo.h ESCAPE_QUOTES)
-
-if (BUILD_TESTING)
-    if(NOT GMX_DEVELOPER_BUILD)
-        set(UNITTEST_TARGET_OPTIONS EXCLUDE_FROM_ALL)
-    endif()
-    if (GMX_BUILD_UNITTESTS)
-        add_subdirectory(external/googletest)
-    endif()
-    include(testutils/TestMacros.cmake)
-    add_subdirectory(testutils)
-endif()
-
-add_subdirectory(gromacs)
-add_subdirectory(programs)
-
-# Activate targets for new C++ API components and docs.
-option(GMXAPI "Experimental external interfaces" ON)
-if (GMXAPI)
-   add_subdirectory(api)
-endif()
+# The include directory should be mostly empty so that we can use it internally as
+# the public include directory during build and testing. No targets are defined.
+# Linking targets in the build tree should use the gmxapi INTERFACE. Scripts
+# Needing access to a list of pre-installed public headers can look at the
+# GMXAPI_PUBLIC_BUILD_HEADERS variable in the src/api scope (after the src/api/cpp
+# subdirectory has been processed).
