[WIP] Core changes for gmxapi API-driven MD simulation.
This draft change is intended to contain everything necessary
to produce a gmxapi 0.0.6 compatible GROMACS based as near the
tip of Gerrit master as possible. Once this succeeds, the patch
can be split into multiptle patches and used as a starting point
to get kassonlab/gmxapi to build against a gromacs containing
the GROMACS 2019 release git commit history.

Change-Id: I40d9931d24560d22b2df72e6cb58db9a60c32f10

--- a/src/api/cpp/CMakeLists.txt
+++ b/src/api/cpp/CMakeLists.txt
@@ -53,6 +53,14 @@ configure_file(include/version.in.h include/gmxapi/version.h)
 # inspected or, for full paths in the build environment, the GMXAPI_PUBLIC_BUILD_HEADERS
 # variable. See below.
 set(_gmxapi_interface_headers
+    include/gmxapi/context.h
+    include/gmxapi/exceptions.h
+    include/gmxapi/gmxapi.h
+    include/gmxapi/gromacsfwd.h
+    include/gmxapi/md.h
+    include/gmxapi/session.h
+    include/gmxapi/status.h
+    include/gmxapi/system.h
     include/gmxapi/version.h)
 
 ################################################################################
