[WIP] Proof-of-concept gmxapi framework.
Port of gmxapi GROMACS fork 0.0.6 from
https://github.com/kassonlab/gromacs-gmxapi
This commit encompasses most of the roadmap described in #2585, which
describes roughly 30 milestones. Redmine issues for each milestone and
chunks from this commit will be submitted separately, but may help to
illustrate the project goals. Also see https://github.com/kassonlab/gmxapi
and issues linked from #2585

* Consolidate gmx::Mdrunner in src/gromacs/mdrun
* Move mdrun mainFunction to client code. Insert a Builder on which to
  develop the distinction between user interface and implementation code.
  User interface is handled in Director code, while the Builder and code
  further down the mdrun call stack should be user interface agnostic
  (i.e. not CLI-centric).
* Clarify parameter setting for spawned Mdrunner threads.
* Begin to encapsulate filename options available to client code from
  the actual client code.
* Remove extraneous variables `nfile` and `fnm`.
* enable MD runner for API and CLI.
* Integrator builder.
* Separate do_md from the other integration methods to allow different
  Builder. Decouple do_md from old params container.
* Enable a placeholder to manage execution context of simluation runners.

Change-Id: I40d9931d24560d22b2df72e6cb58db9a60c32f10

--- a/src/api/cpp/CMakeLists.txt
+++ b/src/api/cpp/CMakeLists.txt
@@ -53,6 +53,14 @@ configure_file(include/version.h.in include/gmxapi/version.h)
 # inspected or, for full paths in the build environment, the GMXAPI_PUBLIC_BUILD_HEADERS
 # variable. See below.
 set(_gmxapi_interface_headers
+    include/gmxapi/context.h
+    include/gmxapi/exceptions.h
+    include/gmxapi/gmxapi.h
+    include/gmxapi/gromacsfwd.h
+    include/gmxapi/md.h
+    include/gmxapi/session.h
+    include/gmxapi/status.h
+    include/gmxapi/system.h
     include/gmxapi/version.h)
 
 ################################################################################
@@ -134,6 +142,15 @@ target_include_directories(gmxapi PUBLIC
     $<INSTALL_INTERFACE:include>
     )
 
+# Define private interface in build environment. (Not installed.)
+# Unit tests for implementation details can use this target.
+add_library(gmxapiImpl INTERFACE)
+target_include_directories(gmxapiImpl INTERFACE
+                           $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+                           $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>
+                           )
+add_library(Gromacs::gmxapiImpl ALIAS gmxapiImpl)
+
 # Define implementation interface
 target_include_directories(gmxapi PRIVATE
                            ${CMAKE_CURRENT_SOURCE_DIR}>/include
@@ -147,11 +164,27 @@ target_include_directories(gmxapi PRIVATE
 # and IDEs work better.
 
 # Private / implementation headers in src/api/cpp
-target_sources(gmxapi PRIVATE)
+target_sources(gmxapi PRIVATE
+               md-impl.h
+               mdsignals-impl.h
+               session-impl.h
+               sessionresources-impl.h
+               system-impl.h
+               workflow-impl.h)
 
 target_sources(
     gmxapi PRIVATE
+    context.cpp
+    gmxapi.cpp
+    md.cpp
+    mdmodule.cpp
+    mdsignals.cpp
+    outputstream.cpp
+    session.cpp
+    status.cpp
+    system.cpp
     version.cpp
+    workflow.cpp
 )
 
 # Help development tools to understand how include paths will be resolved.
