Let gmxcore vote +2 verified, so that they can judge that a Jenkins failure can be ignored

--- a/project.config
+++ b/project.config
@@ -90,6 +90,7 @@
 	action = rebase if necessary
 	mergeContent = true
 [access "refs/heads/*"]
+	label-Verified = -2..+2 group gmxcore
 	label-Verified = -1..+1 group Registered Users
 	owner = group gmxcore
 [access "refs/private/jochenhub/collradialpull"]
