Added physical validation document to the dev manual.
physical_validation.rst had been written but not added to the
document generation

Unwrapped a few lines that were causing warnings

Change-Id: I99ade0d25ae3897f01a6ac57d4369c2a4e36f61b

--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -302,6 +302,7 @@ if (SPHINX_FOUND)
         dev-manual/language-features.rst
         dev-manual/naming.rst
         dev-manual/overview.rst
+        dev-manual/physical_validation.rst
         dev-manual/redmine-states.png
         dev-manual/relocatable-binaries.rst
         dev-manual/reportstyle.rst
